updated sonar properties to support sonarcloud

--- a/tests/sonar-project.properties
+++ b/tests/sonar-project.properties
@@ -1,4 +1,7 @@
 # Required metadata 
+# Uncomment the following line and add your Org/Username from GitHub or such
+#sonar.organization=YourGithubOrg
+# If using Sonar Cloud, Replace Project Key with the  Actual 
 sonar.projectKey=Jacoco
 sonar.projectName=Jacoco Code Coverage
 sonar.projectVersion=1.0 
