--- a/tests/sonar-project.properties
+++ b/tests/sonar-project.properties
@@ -9,6 +9,7 @@ sonar.projectVersion=1.0
 sonar.sources=code-coverage-jacoco
 # Encoding of the source files 
 sonar.sourceEncoding=UTF-8
-  sonar.java.binaries=.
+sonar.java.binaries=.
 sonar.jacoco.reportPaths=code-coverage-jacoco/target/coverage-reports/jacoco-ut.exec
+sonar.coverage.jacoco.xmlReportPaths=code-coverage-jacoco/target/site/jacoco-ut/jacoco.xml
 
